--- a/index.html
+++ b/index.html
@@ -55,12 +55,16 @@ padding:40px 20px;
 z-index:999;
 }
 
-#menu a{
+#menu a, #menu button{
 display:block;
 color:white;
 text-decoration:none;
 font-size:18px;
 margin:15px 0;
+background:none;
+border:none;
+text-align:left;
+cursor:pointer;
 }
 
 .submenu{
@@ -68,7 +72,7 @@ margin-left:15px;
 display:none;
 }
 
-.show{display:block;}
+/* open menu */
 .open{right:0;}
 
 /* SECTIONS */
@@ -140,10 +144,11 @@ padding:25px;
 
 <!-- MENU -->
 <div id="menu">
-<a href="#" onclick="toggleMenu()">✖ Close</a>
-<a href="#home">Home</a>
-<a href="#" onclick="toggleSub()">Products ▼</a>
+<button onclick="toggleMenu()">✖ Close</button>
 
+<a href="#home">Home</a>
+
+<button onclick="toggleSub()">Products ▼</button>
 <div id="submenu" class="submenu">
 <a href="low-ec-cocopeat.html">Low EC Cocopeat</a>
 <a href="high-ec-cocopeat.html">High EC Cocopeat</a>
@@ -207,7 +212,7 @@ padding:25px;
 </div>
 
 <div class="card">
-<img src="IMG_1167.jpg">
+<img src="IMG_1167.jpeg">
 <div>
 <h3>Raw Coconut</h3>
 <p>Farm fresh supply.</p>
@@ -230,7 +235,12 @@ document.getElementById("menu").classList.toggle("open");
 }
 
 function toggleSub(){
-document.getElementById("submenu").classList.toggle("show");
+var sub = document.getElementById("submenu");
+if(sub.style.display === "block"){
+sub.style.display = "none";
+}else{
+sub.style.display = "block";
+}
 }
 </script>
 
