--- a/raw-coconut.html
+++ b/raw-coconut.html
@@ -1,106 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Raw Coconut | Karthick Coirs</title>
+<title>Raw Coconut</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body{
-margin:0;
-font-family:Georgia,serif;
-background:#f8fff8;
-color:#222;
-}
-
-header{
-background:#1b5e20;
-color:white;
-text-align:center;
-padding:40px 20px;
-}
-
-section{
-max-width:1000px;
-margin:auto;
-padding:40px 20px;
-}
-
-h1,h2{color:#1b5e20;}
-
-.product-box{
-background:white;
-border-radius:12px;
-box-shadow:0 4px 12px rgba(0,0,0,.1);
-padding:25px;
-}
-
-.product-box img{
-width:100%;
-max-height:350px;
-object-fit:cover;
-border-radius:10px;
-margin-bottom:20px;
-}
-
-ul{line-height:1.8;}
-a.btn{
-display:inline-block;
-margin-top:20px;
-background:#1b5e20;
-color:white;
-padding:12px 20px;
-text-decoration:none;
-border-radius:6px;
-}
+body{font-family:Poppins,sans-serif;margin:0;padding:20px;}
+img{width:100%;max-width:400px;border-radius:12px;}
+a{color:green;}
 </style>
 </head>
-
 <body>
 
-<header>
 <h1>Raw Coconut</h1>
-<p>Natural Farm Fresh Coconut Supply</p>
-</header>
+<img src="IMG_1167.jpg">
 
-<section>
-<div class="product-box">
+<p>Fresh raw coconuts directly from farms.</p>
 
-<img src="IMG_1167.jpg" alt="Raw Coconut">
-
-<h2>Product Description</h2>
-<p>
-We supply high quality raw coconuts directly from farmers in Tamil Nadu.
-Our coconuts are fresh, natural, and suitable for coir, oil mills, exporters,
-temples, traders and food industries.
-</p>
-
-<h2>Uses</h2>
+<h3>Uses</h3>
 <ul>
-<li>Coir & Cocopeat Manufacturing</li>
-<li>Oil Extraction Units</li>
-<li>Temple & Wholesale Supply</li>
-<li>Food Processing Industry</li>
+<li>Food & Oil extraction</li>
+<li>Religious & retail</li>
+<li>Industrial raw material</li>
 </ul>
 
-<h2>Quality Specifications</h2>
-<ul>
-<li>Fresh & Mature Coconuts</li>
-<li>Natural Brown Husk</li>
-<li>High Oil Content</li>
-<li>No Chemical Treatment</li>
-</ul>
-
-<h2>Packing</h2>
-<ul>
-<li>Loose Bulk</li>
-<li>Gunny Bags</li>
-<li>Truck Load / Container Load</li>
-</ul>
-
-<a href="index.html" class="btn">← Back to Home</a>
-
-</div>
-</section>
+<a href="index.html">← Back</a>
 
 </body>
 </html>
