--- a/index.html
+++ b/index.html
@@ -2,120 +2,37 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Karthick Coirs – Cocopeat Manufacturer</title>
+<title>Karthick Coirs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-*{box-sizing:border-box}
-body{
-margin:0;
-font-family:Georgia,serif;
-background:#f7fff7;
-color:#222;
-}
+body{margin:0;font-family:Georgia,serif;background:#f7fff7;}
+header{background:#1b5e20;color:#fff;text-align:center;padding:40px 20px;position:relative;}
+header img{width:90px;background:#fff;border-radius:50%;padding:10px;}
 
-/* HEADER */
-header{
-background:#1b5e20;
-color:white;
-padding:40px 20px;
-text-align:center;
-position:relative;
-}
-header img{
-width:90px;
-background:white;
-border-radius:50%;
-padding:10px;
-}
-
-/* MENU */
 .menu-btn{
-position:absolute;
-right:20px;
-top:20px;
-background:white;
-border:none;
-font-size:24px;
-padding:10px 14px;
-border-radius:6px;
-cursor:pointer;
+position:absolute;right:15px;top:15px;
+background:white;border:none;font-size:26px;padding:8px 14px;border-radius:6px;
 }
 
 #menu{
-position:fixed;
-top:0;
-right:-100%;
-width:75%;
-height:100%;
-background:#1b5e20;
-color:white;
-transition:0.4s;
-padding:30px 20px;
-z-index:999;
+position:fixed;top:0;right:-100%;width:75%;height:100%;
+background:#1b5e20;color:white;transition:.4s;padding:30px;z-index:999;
 }
-#menu a{
-display:block;
-color:white;
-text-decoration:none;
-font-size:18px;
-margin:15px 0;
-}
-#menu a:hover{opacity:.8}
+#menu.open{right:0;}
+#menu a{color:white;text-decoration:none;display:block;margin:15px 0;font-size:18px;}
 
-.submenu{
-margin-left:15px;
-display:none;
-}
-.show{display:block;}
-.open{right:0;}
+.submenu{display:none;margin-left:15px;}
+.submenu.show{display:block;}
 
-/* SECTIONS */
-section{
-max-width:1100px;
-margin:auto;
-padding:40px 20px;
-}
-h2{
-color:#1b5e20;
-border-bottom:3px solid #1b5e20;
-padding-bottom:5px;
-}
-
-/* PRODUCTS */
-.products{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-gap:25px;
-}
-.card{
-background:white;
-border-radius:12px;
-overflow:hidden;
-box-shadow:0 4px 12px rgba(0,0,0,.1);
-}
-.card img{
-width:100%;
-height:200px;
-object-fit:cover;
-}
+section{max-width:1100px;margin:auto;padding:40px 20px;}
+.products{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 4px 10px rgba(0,0,0,.1);}
+.card img{width:100%;height:200px;object-fit:cover;}
 .card div{padding:15px;}
-.card a{
-display:block;
-background:#1b5e20;
-color:white;
-text-align:center;
-padding:12px;
-text-decoration:none;
-}
+.card a{display:block;background:#1b5e20;color:white;text-align:center;padding:12px;text-decoration:none;}
 
-/* FOOTER */
-footer{
-background:#1b5e20;
-color:white;
-text-align:center;
-padding:25px;
-}
+footer{background:#1b5e20;color:white;text-align:center;padding:20px;}
 </style>
 </head>
 
@@ -125,13 +42,11 @@ padding:25px;
 <button class="menu-btn" onclick="toggleMenu()">☰</button>
 <img src="Kclogo.jpeg">
 <h1>KARTHICK COIRS</h1>
-<p>Premium Cocopeat & Coir Products</p>
-<p>Palani, Tamil Nadu – India</p>
+<p>Premium Coco Products</p>
 </header>
 
-<!-- MENU -->
 <div id="menu">
-<a href="#" onclick="closeMenu()">✖ Close</a>
+<a href="#" onclick="closeMenu()">❌ Close</a>
 <a href="#home" onclick="closeMenu()">Home</a>
 
 <a href="#" onclick="toggleSub()">Products ▼</a>
@@ -146,57 +61,26 @@ padding:25px;
 <a href="coconut-shell.html" onclick="closeMenu()">Coconut Shell</a>
 </div>
 
-<a href="#enquiry" onclick="closeMenu()">Enquiry</a>
+<a href="#contact" onclick="closeMenu()">Enquiry</a>
 </div>
 
 <section id="home">
 <h2>Our Products</h2>
-
 <div class="products">
 
-<div class="card">
-<img src="Lowec.jpeg">
-<div><h3>Low EC Cocopeat</h3><p>Washed & buffered for export.</p></div>
-<a href="low-ec-cocopeat.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Highec.jpeg">
-<div><h3>High EC Cocopeat</h3><p>Natural farming cocopeat.</p></div>
-<a href="high-ec-cocopeat.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Growbag.jpeg">
-<div><h3>Grow Bags</h3><p>For vegetable cultivation.</p></div>
-<a href="grow-bags.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Polutary.jpeg">
-<div><h3>Poultry Coco Pith</h3><p>Absorbent bedding.</p></div>
-<a href="poultry-coco-pith.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="Nursery.jpeg">
-<div><h3>Nursery Cocopeat</h3><p>Seedling grade.</p></div>
-<a href="nursery-cocopeat.html">View Details</a>
-</div>
-
-<div class="card">
-<img src="IMG_1167.jpg">
-<div><h3>Raw Coconut</h3><p>Farm fresh supply.</p></div>
-<a href="raw-coconut.html">View Details</a>
-</div>
+<div class="card"><img src="Lowec.jpeg"><div><h3>Low EC Cocopeat</h3></div><a href="low-ec-cocopeat.html">View</a></div>
+<div class="card"><img src="Highec.jpeg"><div><h3>High EC Cocopeat</h3></div><a href="high-ec-cocopeat.html">View</a></div>
+<div class="card"><img src="Growbag.jpeg"><div><h3>Grow Bags</h3></div><a href="grow-bags.html">View</a></div>
+<div class="card"><img src="Polutary.jpeg"><div><h3>Poultry Coco Pith</h3></div><a href="poultry-coco-pith.html">View</a></div>
+<div class="card"><img src="Nursery.jpeg"><div><h3>Nursery Cocopeat</h3></div><a href="nursery-cocopeat.html">View</a></div>
+<div class="card"><img src="IMG_1167.jpg"><div><h3>Raw Coconut</h3></div><a href="raw-coconut.html">View</a></div>
 
 </div>
 </section>
 
-<footer id="enquiry">
+<footer id="contact">
 📞 9363940486 | ✉ kccocoproducts@gmail.com  
-<br>GSTIN: 33CJRPV0480M1ZI  
-<br>© 2026 Karthick Coirs
+<br>GSTIN: 33CJRPV0480M1ZI
 </footer>
 
 <script>
